# gnome-shell-calendar-improved

./: .editorconfig  .eslintrc.json  .gitignore  Makefile  README.md  README.rst  extension.js  metadata.json  prefs.js
docs/: TODO.rst
lib/: settingsRegistry.js  utils.js
sbin/: gnome-shell-resource-extract.sh  gnome-shell-session-debug.sh  manage-npm-packages-via-yarn.sh  manage-poetry-package.sh  manage-virtualenv-package.sh  manage-yarn-package.sh
sbin/eslint/: .gitignore  README.rst  package.json
sbin/make_ical_calendar/: make_ical_calendar.py  pyproject.toml
schemas/: org.gnome.shell.extensions.calendar-improved.gschema.xml
src/: metadata.json  prefs.js  stylesheet.css
src/lib/: calendarEventImproved.js  calendarEventPopOver.js  calendarImproved.js  compat.js  convenience.js  dBusEventSourceImprovedImproved.js  dateTimeUtils.js  eventMessageImproved.js  eventMessageImprovedPre336.js  settingsRegistry.js  utils.js
src/schemas/: gschemas.compiled  org.gnome.shell.extensions.calendar-improved.gschema.xml
src/ui/: preferences.glade
ui/: preferences.glade
